Added Forntend,Backend and Database Files

--- a/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/hero/hero.component.css
+++ b/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/hero/hero.component.css
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url('c:/Users/Bhimaraya/OneDrive/Desktop/bg.jpg'); /* Replace 'your-hero-image.jpg' with the URL or path to your hero image */
+    background-image: url('C:/Users/srika/Desktop/Gadget-Sphere/GadgetSphere FrontEnd Com/GadgetSphere/src/assets/home.jpg'); /* Replace 'your-hero-image.jpg' with the URL or path to your hero image */
     background-size: cover;
     background-position: center;
     height: 100vh; /* Adjust the height as needed */
