--- a/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/brands/brands.component.html
+++ b/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/brands/brands.component.html
@@ -7,11 +7,8 @@
   <h1 class="text-center mb-4">Our Gadget Brands </h1>
 
   <div class="row brand-container">
-    <div class="col-md-2 offset-md-1">
-    <a href="hp.html"> <img  src="assets/hplogo.png"   alt="HP" class="brand-logo"></a>
-    </div>
-    <div class="col-md-2">
-      <img src="assets/lenovoLogo.png" alt="Lenovo" class="brand-logo">
+    <div class="col-md-2 offset-md-2">
+      <img src="assets/msiLogo1.jpg" alt="MSI" class="brand-logo">
     </div>
     <div class="col-md-2">
       <img src="assets/asusLogo.png" alt="Asus" class="brand-logo">
@@ -22,18 +19,53 @@
     <div class="col-md-2">
       <img src="assets/dellLogo.png" alt="Dell" class="brand-logo">
     </div>
+  
   </div>
 
   <div class="row brand-container">
-    <div class="col-md-2 offset-md-3">
-      <img src="assets/acerLogo.png" alt="Acer" class="brand-logo">
+    <div class="col-md-2 offset-md-2">
+      <img src="assets/iqoo.png" alt="iQOO" class="brand-logo">
     </div>
     <div class="col-md-2">
-      <img src="assets/msiLogo1.jpg" alt="MSI" class="brand-logo">
+      <img src="assets/oneplus.png" alt="OnePlus" class="brand-logo">
     </div>
     <div class="col-md-2">
-      <img src="assets/razerLogo.jpg" alt="Razer" class="brand-logo">
+      <img src="assets/realme.png" alt="Realme" class="brand-logo">
     </div>
+    <div class="col-md-2">
+      <img src="assets/poco.png" alt="Poco" class="brand-logo">
+    </div>
+  </div>
+
+  <div class="row brand-container">
+    <div class="col-md-2 offset-md-2">
+      <img src="assets/mi.png" alt="Xiaomi" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/oppo.png" alt="Oppo" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/boat.png" alt="boAt" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/noise.png" alt="Noise" class="brand-logo">
+    </div>
+  </div>
+
+  <div class="row brand-container">
+    <div class="col-md-2 offset-md-2">
+      <img src="assets/sony.png" alt="Sony" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/crucial.png" alt="Crucial" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/Samsung.png" alt="Samsung" class="brand-logo">
+    </div>
+    <div class="col-md-2">
+      <img src="assets/hplogo.png" alt="HP" class="brand-logo">
+    </div>
+    
   </div>
 
 </div>
