--- a/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/userregistration/userregistration.component.html
+++ b/GadgetSphere FrontEnd Com/GadgetSphere/src/app/component/userregistration/userregistration.component.html
@@ -1,36 +1,42 @@
+<!-- userregistration.component.html -->
+
 <app-indexnavbar></app-indexnavbar>
 
 <div class="container" style="padding-top: 30px;">
-  <div class="form-container" >
+  <div class="form-container">
     <h2>User Registration</h2>
     <form [formGroup]="userForm" class="row g-3" (ngSubmit)="addUser()">
       <div class="form-group">
         <label for="firstName">First Name</label>
         <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" formControlName="fname">
-        <div *ngIf="userForm.controls['fname'].invalid && userForm.controls['fname'].touched" class="text-danger">First Name is required</div>
+        <div *ngIf="userForm.get('fname')?.invalid && userForm.get('fname')?.touched" class="text-danger">First Name is required</div>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
         <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" formControlName="lname">
-        <div *ngIf="userForm.controls['lname'].invalid && userForm.controls['lname'].touched" class="text-danger">Last Name is required</div>
+        <div *ngIf="userForm.get('lname')?.invalid && userForm.get('lname')?.touched" class="text-danger">Last Name is required</div>
       </div>
       <div class="form-group">
-        <label for="lastName">Mobile Number</label>
+        <label for="mobileNo">Mobile Number</label>
         <input type="number" class="form-control" id="mobileNo" placeholder="Enter your Mobile Number" formControlName="mnumber">
-        <div *ngIf="userForm.controls['mnumber'].invalid && userForm.controls['mnumber'].touched" class="text-danger">Mobile Number is required</div>
+        <div *ngIf="userForm.get('mnumber')?.invalid && userForm.get('mnumber')?.touched" class="text-danger">Mobile Number is required</div>
       </div>
       <div class="form-group">
         <label for="email">Email Address</label>
         <input type="email" class="form-control" id="email" placeholder="Enter your email address" formControlName="email">
-        <div *ngIf="userForm.controls['email'].invalid && userForm.controls['email'].touched" class="text-danger">Please enter a valid email address</div>
+        <div *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="text-danger">Please enter a valid email address</div>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" placeholder="Enter your password" formControlName="password">
-        <div *ngIf="userForm.controls['password'].invalid && userForm.controls['password'].touched" class="text-danger">Password is required</div>
+        <div *ngIf="userForm.get('password')?.invalid && userForm.get('password')?.touched" class="text-danger">
+          <div *ngIf="userForm.get('password')?.errors?.['required']">Password is required.</div>
+          <div *ngIf="userForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</div>
+        </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block" [disabled]="userForm.invalid">Register</button>
     </form>
   </div>
 </div>
+
 <app-indexfooter></app-indexfooter>
